Fix footer on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -300,7 +300,7 @@ h2 {
     font-style: normal;
     font-weight: 100;
     font-size: 12px;
-    line-height: 16px;
+    line-height: 30px;
     color: #FFFFFF;
 }
 
